# gyro-claw

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  debug_full_parser  debug_full_parser_2  debug_full_parser_3  debug_full_parser_4  debug_regex  docker-compose.yml  make_transparent.py
playwright-server/: package-lock.json  package.json  server.js
src/: config.rs  main.rs
src/agent/: executor.rs  experience.rs  indexer.rs  memory.rs  mod.rs  planner.rs  task.rs  task_worker.rs  tasks.rs  test_fix_loop.rs  tool_parser.rs  worker.rs
src/api/: mod.rs  server.rs
src/integrations/: mod.rs  slack.rs  telegram.rs
src/llm/: client.rs  mod.rs
src/tools/: browser.rs  edit.rs  filesystem.rs  git.rs  http.rs  mod.rs  playwright.rs  project_map.rs  search.rs  semantic_search.rs  shell.rs  skills.rs  skills_tool.rs  test_runner.rs  wait.rs  web_fetch.rs  web_search.rs
src/tools/computer/: app_state.rs  cursor.rs  keyboard.rs  mod.rs  mouse.rs  screen_diff.rs  screenshot.rs  scroll.rs  system.rs  ui_detector.rs  window.rs
src/tools/sub_agents/: browser.rs  coder.rs  mod.rs  researcher.rs
src/vault/: mod.rs  secrets.rs  telemetry.rs
tests/: secret_isolation_tests.rs
